--- a/css/styles.css
+++ b/css/styles.css
@@ -470,7 +470,7 @@ img {
   height: 80px;
   margin-left: 70px;
 }
-.join-us-text {
+.action-text {
   margin-bottom: 20px;
   font-family: Roboto;
   font-size: 14px;
@@ -504,6 +504,59 @@ img {
 .join-us-link:focus {
   background-color: var(--accent-color);
   color: var(--primary-color);
+}
+.subscribe {
+  width: 570px;
+  height: 86px;
+  margin-left: 93px;
+  display: flex;
+}
+.subscribe-label {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 3%;
+  color: var(--shadow-text-color);
+}
+.subscribe-input {
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-radius: 4px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.submit-btn {
+  margin-left: 12px;
+  display: inline-flex;
+  min-width: 200px;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+  border: 0;
+  padding: 0;
+  border-radius: 4px;
+
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: var(--primary-color);
+  cursor: pointer;
+
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  text-align: center;
+}
+
+.send-icon {
+  fill: currentColor;
+  margin-left: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 /* Бэкдроп и модальное окно */
 .backdrop {
@@ -564,6 +617,78 @@ img {
 .close-btn:focus {
   color: var(--accent-color);
   border: 1px solid var(--accent-color);
+}
+.form {
+  padding: 40px;
+}
+.form-text {
+  margin-bottom: 12px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--tertiary-text-color);
+}
+.form-field {
+  display: flex;
+  flex-direction: column;
+}
+.form-field:not(:last-child) {
+  margin-bottom: 10px;
+}
+.form-input {
+  margin: 0;
+  padding: 11px 12px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+}
+.form-label {
+  color: var(--primary-text-color);
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  text-align: left;
+  vertical-align: top;
+  letter-spacing: 1%;
+}
+.textaria::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+  font-size: 12px;
+  line-height: 1.17;
+  text-align: left;
+  vertical-align: top;
+  letter-spacing: 1%;
+}
+.textaria {
+  width: 448px;
+  height: 120px;
+  padding: 12px 16px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+}
+.checkbox {
+  margin-top: 20px;
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.policy-text {
+  color: var(--primary-text-color);
+  font-size: 14px;
+  line-height: 1.71;
+  text-align: left;
+  vertical-align: top;
+  letter-spacing: 3%;
+}
+
+.policy-text a {
+  color: var(--accent-color);
+  text-decoration: underline;
+}
+.submit-btn.modal {
+  margin: 0 auto;
 }
 /* Портфолио */
 .portfolio-section {
