--- a/css/styles.css
+++ b/css/styles.css
@@ -205,9 +205,12 @@ img {
 .primary-button {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-block;
-  min-width: 136px;
-  padding: 10px 30px;
+  display: inline-flex;
+  min-width: 200px;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
   border: 0;
   border-radius: 4px;
 
@@ -505,58 +508,63 @@ img {
   background-color: var(--accent-color);
   color: var(--primary-color);
 }
+.footer-form {
+  margin-left: auto;
+  display: block;
+}
 .subscribe {
-  width: 570px;
-  height: 86px;
-  margin-left: 93px;
+  position: relative;
   display: flex;
 }
 .subscribe-label {
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  top: 32%;
+  left: 0;
+  transform: translateX(45%);
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 3%;
   color: var(--shadow-text-color);
 }
+
 .subscribe-input {
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    outline 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: 12px;
   width: 358px;
   height: 50px;
-  padding-left: 16px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding: 15px 16px;
   border-radius: 4px;
   background-color: transparent;
+  color: var(--primary-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
-.tertiary-btn {
-  display: inline-flex;
-  min-width: 200px;
-  height: 50px;
-  align-items: center;
-  justify-content: center;
-  border: 0;
-  padding: 0;
-  border-radius: 4px;
-
-  background-color: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  color: var(--primary-color);
-  cursor: pointer;
-
-  font-family: inherit;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  text-align: center;
+.subscribe-input:hover,
+.subscribe-input:focus {
+  border: 1px solid var(--accent-color);
+  outline: 0;
 }
-
+.subscribe-input:hover + .subscribe-label,
+.subscribe-input:focus + .subscribe-label,
+.subscribe-input:not(:placeholder-shown) + .subscribe-label {
+  transform: translateX(-50px);
+  color: var(--primary-color);
+}
+.subscribe-input::placeholder {
+  opacity: 0;
+}
+.subscribe-input:hover::placeholder,
+.subscribe-input:focus::placeholder {
+  opacity: 1;
+}
 .send-icon {
   fill: currentColor;
   margin-left: 10px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 /* Бэкдроп и модальное окно */
 .backdrop {
@@ -585,6 +593,7 @@ img {
   top: 50%;
   left: 50%;
 
+  text-align: center;
   width: 528px;
   height: 580px;
   background-color: var(--primary-color);
@@ -601,10 +610,11 @@ img {
   display: inline-flex;
   width: 30px;
   height: 30px;
+  padding: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 
-  background-color: var(--primary-color);
+  background-color: transparent;
 
   justify-content: center;
   align-items: center;
@@ -631,16 +641,19 @@ img {
   color: var(--tertiary-text-color);
 }
 .form-field {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
 }
 
 .form-input {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0;
   width: 448px;
   height: 40px;
-  padding: 11px 12px;
+  padding: 11px 12px 11px 40px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
 }
@@ -651,49 +664,91 @@ img {
   line-height: 1.17;
   text-align: left;
   vertical-align: top;
-  letter-spacing: 1%;
+  letter-spacing: 0.01em;
+}
+.form-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  top: 75%;
+  left: 0;
+  transform: translate(67%, -75%);
+  fill: var(--tertiary-text-color);
+}
+.form-input:hover + .form-icon,
+.form-input:focus + .form-icon {
+  fill: var(--accent-color);
 }
 .comment-field {
   display: flex;
   flex-direction: column;
 }
-.textaria::placeholder {
+.textarea::placeholder {
   color: rgba(117, 117, 117, 0.5);
   font-size: 12px;
   line-height: 1.17;
   text-align: left;
   vertical-align: top;
-  letter-spacing: 1%;
+  letter-spacing: 0.01em;
 }
-.textaria {
+.textarea {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 448px;
   height: 120px;
   padding: 12px 16px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
+  resize: none;
 }
 .checkbox {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    outline 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-top: 20px;
   margin-bottom: 30px;
   display: flex;
-  align-items: center;
   justify-content: center;
 }
-.policy-text {
+.checkbox-input {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  position: absolute;
+}
+.checkbox-label {
+  display: flex;
+  align-items: center;
   color: var(--primary-text-color);
   font-size: 14px;
   line-height: 1.71;
-  text-align: left;
-  vertical-align: top;
-  letter-spacing: 3%;
+  letter-spacing: 0.03em;
 }
-
-.policy-text a {
+.checkbox-icon {
+  transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  margin-right: 8px;
+  background-image: url(../images/checkbox.svg);
+}
+.checkbox-input:checked + .checkbox-icon {
+  background-image: url(../images/icon-check.svg);
+  background-color: var(--accent-color);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-origin: border-box;
+}
+.checkbox-label a {
   color: var(--accent-color);
   text-decoration: underline;
 }
-.submit-btn {
-  margin-left: 124px;
+.form-input:hover,
+.form-input:focus,
+.textarea:hover,
+.textarea:focus {
+  border: 1px solid var(--accent-color);
+  outline: 0;
 }
 /* Портфолио */
 .portfolio-section {
