--- a/css/styles.css
+++ b/css/styles.css
@@ -508,60 +508,38 @@ img {
   background-color: var(--accent-color);
   color: var(--primary-color);
 }
-.footer-form {
-  margin-left: auto;
-  display: block;
-}
 .subscribe {
-  position: relative;
+  margin-left: auto;
+}
+.footer-form {
   display: flex;
 }
-.subscribe-label {
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: absolute;
-  top: 32%;
-  left: 0;
-  transform: translateX(45%);
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 3%;
-  color: var(--shadow-text-color);
-}
-
 .subscribe-input {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    outline 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: 12px;
+
   width: 358px;
   height: 50px;
   padding: 15px 16px;
   border-radius: 4px;
   background-color: transparent;
-  color: var(--primary-color);
+
   border: 1px solid rgba(255, 255, 255, 0.3);
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  font-size: 14px;
+
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--shadow-text-color);
 }
 .subscribe-input:hover,
 .subscribe-input:focus {
   border: 1px solid var(--accent-color);
   outline: 0;
 }
-.subscribe-input:hover + .subscribe-label,
-.subscribe-input:focus + .subscribe-label,
-.subscribe-input:not(:placeholder-shown) + .subscribe-label {
-  transform: translateX(-50px);
-  color: var(--primary-color);
-}
-.subscribe-input::placeholder {
-  opacity: 0;
-}
-.subscribe-input:hover::placeholder,
-.subscribe-input:focus::placeholder {
-  opacity: 1;
-}
+
 .send-icon {
   fill: currentColor;
   margin-left: 10px;
@@ -592,7 +570,7 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-
+  padding: 40px;
   text-align: center;
   width: 528px;
   height: 580px;
@@ -628,9 +606,7 @@ img {
   color: var(--accent-color);
   border: 1px solid var(--accent-color);
 }
-.form {
-  padding: 40px;
-}
+
 .form-text {
   margin-bottom: 12px;
   font-size: 20px;
@@ -641,10 +617,12 @@ img {
   color: var(--tertiary-text-color);
 }
 .form-field {
-  position: relative;
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
+}
+.form-input-wrapper {
+  position: relative;
 }
 
 .form-input {
@@ -658,7 +636,6 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
 }
 .form-label {
-  color: var(--primary-text-color);
   margin-bottom: 4px;
   font-size: 12px;
   line-height: 1.17;
@@ -669,9 +646,9 @@ img {
 .form-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: absolute;
-  top: 75%;
-  left: 0;
-  transform: translate(67%, -75%);
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
   fill: var(--tertiary-text-color);
 }
 .form-input:hover + .form-icon,
@@ -708,6 +685,7 @@ img {
   margin-bottom: 30px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .checkbox-input {
   appearance: none;
@@ -718,7 +696,6 @@ img {
 .checkbox-label {
   display: flex;
   align-items: center;
-  color: var(--primary-text-color);
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -731,15 +708,17 @@ img {
   height: 15px;
   margin-right: 8px;
   background-image: url(../images/checkbox.svg);
+  border-radius: 2px;
+  background-size: contain;
 }
 .checkbox-input:checked + .checkbox-icon {
   background-image: url(../images/icon-check.svg);
   background-color: var(--accent-color);
   background-size: contain;
   background-repeat: no-repeat;
-  background-origin: border-box;
+  background-position: center;
 }
-.checkbox-label a {
+.conditions {
   color: var(--accent-color);
   text-decoration: underline;
 }
